# project-a

./: .gitignore  architecture.drawio  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml
notebooks/: MongoDB.ipynb
src/engine/: api_server_setup.py
